// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render a ListView with a divided list 1`] = `
<InjectIntl(List)
  data-terra-clinical-item-collection-list-view={true}
  dividerStyle="standard"
>
  <Item
    accessoryAlignment="alignCenter"
    comment={
      <ItemComment
        isTruncated={false}
        text="test comment"
      />
    }
    endAccessory={
      <p>
        E
      </p>
    }
    isListItemTruncated={false}
    isSelectable={false}
    isSelected={false}
    key=".$1"
    listItemLayout="oneColumn"
    listItemTextEmphasis="default"
    reserveStartAccessorySpace={true}
    showListItemChevron={false}
    startAccessory={
      <p>
        S
      </p>
    }
    view="list"
  >
    <ItemDisplay
      iconAlignment="center"
      isDisabled={false}
      isTruncated={false}
      text="Display 1"
      textStyle="primary"
    />
  </Item>
</InjectIntl(List)>
`;

exports[`should render a ListView with children 1`] = `
<InjectIntl(List)
  data-terra-clinical-item-collection-list-view={true}
  dividerStyle="none"
>
  <Item
    accessoryAlignment="alignCenter"
    comment={
      <ItemComment
        isTruncated={false}
        text="test comment"
      />
    }
    endAccessory={
      <p>
        E
      </p>
    }
    isListItemTruncated={false}
    isSelectable={false}
    isSelected={false}
    key=".0"
    listItemLayout="oneColumn"
    listItemTextEmphasis="default"
    reserveStartAccessorySpace={true}
    showListItemChevron={false}
    startAccessory={
      <p>
        S
      </p>
    }
    view="list"
  >
    <ItemDisplay
      iconAlignment="center"
      isDisabled={false}
      isTruncated={false}
      text="Display 1"
      textStyle="primary"
    />
  </Item>
</InjectIntl(List)>
`;

exports[`should render a default ListView 1`] = `
<InjectIntl(List)
  data-terra-clinical-item-collection-list-view={true}
  dividerStyle="none"
/>
`;
